GH-0000 Replace LMDB estimation with unified engine